<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ui.Activity_Main">

    <item
        android:id="@+id/action_pause"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/pause"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"/>
    <item
        android:visible="false"
        android:id="@+id/action_achievements"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/achievements"/>
    <item
        android:visible="false"
        android:id="@+id/action_leaderboard"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/leaderboard"/>
    <item
        android:visible="false"
        android:id="@+id/action_faq"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/faq"/>
    <item
        android:id="@+id/action_split_count"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/split_count"/>
    <item
        android:visible="false"
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>
